# danmuji-next

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: tauri-release.yml
scripts/: bump_version_and_build.py  update_server.py
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: blivedm_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  auth.rs  blive_service.rs  commands.rs  config.rs  crypto.rs  kv_store.rs  lib.rs  live_data.rs  live_types.rs  lock_state.rs  main.rs  video_info.rs  video_request.rs  voting.rs  window_state.rs
src-tauri/src/blivedm/: api.rs  client.rs  error.rs  mod.rs  packet.rs
src-tauri/src/blivedm/api/: cookie.rs  danmu.rs  mod.rs  moderation.rs  rank.rs  room.rs  wbi.rs
src-tauri/src/blivedm/message/: danmaku.rs  gift.rs  guard.rs  interact_word.rs  live_status.rs  mod.rs  online_rank_count.rs  online_rank_v2.rs  superchat.rs  user.rs
src/assets/: gift.json
src/composables/: useAutoScroll.ts  useContextMenuActions.ts  useToast.ts
src/router/: index.ts
src/services/: archive.ts  auth.ts  blive-client.ts  gift-icons.ts  logger.ts  settings-applier.ts  settings-sync.ts  updater.ts  window-manager.ts
src/stores/: archive.ts  danmaku.ts  index.ts  settings.ts  video-request.ts  voting.ts
src/styles/: extension-shared.scss  global.scss
src/types/: index.ts
src/views/: ArchiveWindow.vue  ExtensionWindow.vue  MainWindow.vue  SettingsWindow.vue  TabWindow.vue
(+23 files in other folders)
